--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="price-section">
                 <div class="price-section-one">
                     <div class="price-section-img">
-                        <img src="./images/icon-music.svg" alt="music-icon">
+                        <img src="/images/icon-music.svg" alt="music-icon">
                     </div>
                     <div class="price-section-two"> 
                         <p> <b>Annual Plan </b> <br><span class="pricing"> $59.99/year</span> </p>
